# scalebit-zkctf-2024

./: README.md
script/: Checkin.s.sol  Roundabout.s.sol
src/CheckIn/: solve.py  verifier.sol
src/CheckIn/circom/: CheckIn.circom  CheckIn_groth16.zkey  proof.json  witness.wtns
src/Division Quiz/: .gitignore  Cargo.toml  description.md
src/Division Quiz/src/: lib.rs  quiz.rs
src/Ethereal/: Cargo.toml  README.md
src/Ethereal/mint-client/: .gitignore  blacksmith.go  go.mod  main.go  sword.json
src/Ethereal/mint-client/.github/workflows/: publish_web.yaml
src/Ethereal/mint-client/abi/: mint.json
src/Ethereal/mint-client/mint/: mint.go
src/Ethereal/mint-client/types/: types.go
src/Ethereal/mint-client/utils/: transactor.go
src/Ethereal/mint-contracts/src/: Constants.sol  KZGVerifier.sol  MintGem.sol  Pairing.sol
src/Ethereal/mint-contracts/test/: MintNFT.t.sol
src/Ethereal/src/: main.rs
src/Is Zero/: Cargo.toml  description.md
src/Is Zero/src/: is_zero.rs
src/Kid Math/: Cargo.toml  description.md
src/Kid Math/src/: fib.rs
src/Mixer/: Challenge.sol  MerkleTreeLib.sol  Mixer.sol  PoseidonT3.sol  Verifier.sol
src/Mixer/interfaces/: IMixer.sol  IPoseidonT3.sol  IVerifier.sol
src/Roundabout/: solve.py  test.py
src/Roundabout/Circom/: Roundabout.circom  Roundabout_groth16.zkey
src/Roundabout/Contract/: t.json  verifier.sol
src/What a Waste/Circuit/: Round 2 Seed.txt  key.json  locker.circom  locker_plonk_or_groth16.zkey  verification_key.json
src/What a Waste/Contract/: verifier.sol
src/What a Waste/snarkjs_example/: circuit.circom  circuit.r1cs  circuit.r1cs.json  circuit.sym  circuit_0000.zkey  key.json  pot2_0000.ptau  pot2_0001.ptau  pot2_0002.ptau  pot2_beacon.ptau  pot2_final.json  pot2_final.ptau  pot2_final_unsafe.json  pot2_final_unsafe.ptau  t.circom  t.r1cs  t.r1cs.json  t.sym  t_0000.zkey  t_key.json
src/What a Waste/snarkjs_example/circuit_js/: circuit.wasm
src/What a Waste/snarkjs_example/t_js/: t.wasm
src/familiar_strangers/: README.md  package-lock.json  package.json  pnpm-lock.yaml  stranger_judge.js
src/familiar_strangers/circuits/: challenge.circom
src/familiar_strangers/test/: level1_test.circom  level2_test.circom
test/: CheckIn.t.sol  Mixer.t.sol  Roundabout.t.sol
