[package]
name = "Ethereal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", features = [ "derive" ] }
ark-std = { version = "^0.4.0", default-features = false, features = [ "std" ] }
ark-r1cs-std = { version = "^0.4.0", default-features = false }
ark-mnt4-753 = { version = "^0.4.0", default-features = false, features = [ "r1cs", "curve" ] }
ark-mnt6-753 = { version = "^0.4.0", default-features = false, features = [ "r1cs" ] }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-ed-on-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "r1cs" ] }
ark-crypto-primitives = { version = "^0.4.0", default-features = false, features = [ "r1cs", "merkle_tree" ] }
ark-relations = { version = "^0.4.0", default-features = false }
ark-groth16 = { version = "^0.4.0", default-features = false }
ark-bn254 = "0.4.0"
rand = "0.8.4"
num-bigint = { version = "0.4", features = ["rand"] }
