[package]
name = "kid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extend = "1.2.0"
halo2_proofs = { features = [
    "dev-graph",
], git = "https://github.com/quantstamp/halo2.git", rev = "a898d65ae3ad3d41987666f6a03cfc15edae01c4" }
plotters = "0.3.4"
rand_core = { features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
toml = "0.8"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
rand = "0.8"
